events - done, fixed tennets on mobile, fixed event section

--- a/intaglio-v3/HTML/events/adsense.html
+++ b/intaglio-v3/HTML/events/adsense.html
@@ -68,7 +68,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
-                            <div class='event-title'>ADSENSE</div>
+                            <div class='event-title bold'>ADSENSE</div>
                             <div id = 'regBtn' class='pull-right'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODY1/ADSENSE'>Register/Sign In</a></div>
                         </div>
                     </div>
