--- a/intaglio-v3/HTML/events/bizworth.html
+++ b/intaglio-v3/HTML/events/bizworth.html
@@ -59,7 +59,7 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="event-name" href="#body">
-                                BIZWORTH
+                              <img class="logo-img logo-img-main logo-event" src="../img/logo_white.png" alt="IIMC Logo" href = '#'>
                             </a>
                         </div>
                         <!-- End Logo -->
@@ -68,6 +68,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
+                            <div class='event-title bold'>BIZWORTH</div>
                             <div id = 'regBtn' class='pull-right'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODYy/BIZWORTH'>Register/Sign In</a></div>
                         </div>
                     </div>
@@ -83,6 +84,7 @@
           <!-- Indicators -->
           <div class="container event-details">
             <div class="clearfix">
+              <h2 class='bold event-title-small small-screen'> BIZWORTH </h2>
               <h3>"Price is what you pay. Value is what you get." - Warren Buffett</h3>
               <p>Valuation is an art but the first thing we learn is the science. We are told we should be approximately right rather than precisely wrong. Tabulating the price may be easy but proving that the business is worth it requires skill. Intaglio presents a unique opportunity to all those budding ‘Fin Zombies’ to prove their mettle as equity analysts, investment bankers and PE partners in a unique package of sorts.</p>
               <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODYy/BIZWORTH'>Register/Sign In</a></div>
@@ -119,10 +121,36 @@
               <div class="col-md-6">
                 <div class="clearfix poc">
                   <h4> Point of Contact </h4>
-                  <ul>
-                    <li>Snehal Singhania - +91-8697329041 (snehals2018@email.iimcal.ac.in)</li>
-                    <li>Vaanchitha Kalyanaraman - +91-8336943515 </li>
-                  </ul>
+                  <div>
+                    <div class='row'>
+                      <div class='col-md-4 bold'>
+                        Snehal Singhania
+                      </div>
+                      <div class='col-md-4'>
+                        <i class="fa fa-phone"></i> +91-8697329041
+                      </div>
+                      <div class='col-md-4 flex'>
+                        <div><i class="fa fa-envelope"></i></div>
+                        <div class='margin-l-3'> snehals2018@email.iimcal.ac.in </div>
+                      </div>
+                    </div>
+                    <div class = 'row margin-t-2'>
+                      <div class='col-md-4 bold'>
+                        Vaanchitha Kalyanaraman
+                      </div>
+                      <div class='col-md-4'>
+                        <i class="fa fa-phone"></i> +91-8336943515
+                      </div>
+                      <div class='col-md-4 flex'>
+                        <div><i class="fa fa-envelope"></i></div>
+                        <div class='margin-l-3'>vaanchithak15@email.iimcal.ac.in</div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- <ul>
+                    <li> -  ()</li>
+                    <li> - </li>
+                  </ul> -->
                 </div>
                 <div class="clearfix rules">
                   <h4> Rules </h4>
@@ -136,7 +164,7 @@
                   </ul>
                 </div>
                 <div>
-                  <i class="fa fa-inr fa-2x" aria-hidden="true" style='margin-left:30px;margin-top: 20px;'></i><span class='prize'>&nbsp;&nbsp;&nbsp;50K Cash Prize</span>
+                  <i class="fa fa-inr fa-2x" aria-hidden="true" style='margin-left:30px;margin-top: 20px;'></i><span class='prize'>&nbsp;&nbsp;&nbsp;Prize Amount 50,000</span>
                 </div>
               </div>
             </div>
