--- a/intaglio-v3/HTML/events/ck.html
+++ b/intaglio-v3/HTML/events/ck.html
@@ -59,7 +59,7 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="event-name" href="#body">
-                                CONSULTING KNIGHTS
+                              <img class="logo-img logo-img-main logo-event" src="../img/logo_white.png" alt="IIMC Logo" href = '#'>
                             </a>
                         </div>
                         <!-- End Logo -->
@@ -68,6 +68,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
+                            <div class='bold event-title'>CONSULTING KNIGHTS</div>
                             <div id = 'regBtn' class='pull-right'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODY4/CONSULTING_KNIGHTS'>Register/Sign In</a></div>
                         </div>
                     </div>
@@ -83,6 +84,7 @@
           <!-- Indicators -->
           <div class="container event-details">
             <div class="clearfix">
+              <h2 class='bold event-title-small small-screen'> CONSULTING KNIGHTS </h2>
               <h3>"Business strategy is the battle-plan for a better future” – Patrick Dixon</h3>
               <p>Strategy is about making choices, trade-offs; it’s about deliberately choosing to be different. Strategy is at the heart of every decision that organizations take to beat the competition. To win in the long run, strategy is no longer an option but the only answer. Consulting knights is here to judge your consulting skills! It challenges the participants with a comprehensive case developed with our corporate partners that tests the ability to deep dive into the problem and problem solve in a structured way to deliver effective and implementable solutions.</p>
               <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODY4/CONSULTING_KNIGHTS'>Register/Sign In</a></div>
@@ -113,11 +115,44 @@
               <div class="col-md-6">
                 <div class="clearfix poc">
                   <h4> Point of Contact </h4>
-                  <ul>
-                    <li>Preksha Kardam - +91-9958537806 (prekshak2018@email.iimcal.ac.in)</li>
-                    <li>Sovan Nayak - +91-7763806924 (sovann2018@email.iimcal.ac.in)</li>
-                    <li>Hitesh Bahl - +91-9999729981 (hiteshb2018@email.iimcal.ac.in)</li>
-                  </ul>
+                  <div>
+                    <div class='row'>
+                      <div class='col-md-4 bold'>
+                        Preksha Kardam
+                      </div>
+                      <div class='col-md-4'>
+                        <i class="fa fa-phone"></i> +91-9958537806
+                      </div>
+                      <div class='col-md-4 flex'>
+                        <div><i class="fa fa-envelope"></i></div>
+                        <div class='margin-l-3'> prekshak2018@email.iimcal.ac.in</div>
+                      </div>
+                    </div>
+                    <div class = 'row margin-t-2'>
+                      <div class='col-md-4 bold'>
+                        Sovan Nayak
+                      </div>
+                      <div class='col-md-4'>
+                        <i class="fa fa-phone"></i> +91-7763806924
+                      </div>
+                      <div class='col-md-4 flex'>
+                        <div><i class="fa fa-envelope"></i></div>
+                        <div class='margin-l-3'>sovann2018@email.iimcal.ac.in</div>
+                      </div>
+                    </div>
+                    <div class = 'row margin-t-2'>
+                      <div class='col-md-4 bold'>
+                        Hitesh Bahl
+                      </div>
+                      <div class='col-md-4'>
+                        <i class="fa fa-phone"></i> +91-9999729981
+                      </div>
+                      <div class='col-md-4 flex'>
+                        <div><i class="fa fa-envelope"></i></div>
+                        <div class='margin-l-3'>hiteshb2018@email.iimcal.ac.in</div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="clearfix rules">
                   <h4> Rules </h4>
@@ -127,11 +162,10 @@
                     <li>There is no limit to the number of entries from a college</li>
                     <li>Individuals can not be a part of more than one team</li>
                     <li>The decisions taken by the organisers are final</li>
-
                   </ul>
                 </div>
                 <div>
-                  <i class="fa fa-inr fa-2x" aria-hidden="true" style='margin-left:30px;margin-top: 20px;'></i><span class='prize'>&nbsp;&nbsp;&nbsp;60K Cash Prize</span>
+                  <i class="fa fa-inr fa-2x" aria-hidden="true" style='margin-left:30px;margin-top: 20px;'></i><span class='prize'>&nbsp;&nbsp;&nbsp;Prize Amount 60,000</span>
                 </div>
               </div>
             </div>
