--- a/intaglio-v3/HTML/events/curiosio.html
+++ b/intaglio-v3/HTML/events/curiosio.html
@@ -59,7 +59,7 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="event-name" href="#body">
-                                CURIOSIO
+                              <img class="logo-img logo-img-main logo-event" src="../img/logo_white.png" alt="IIMC Logo" href = '#'>
                             </a>
                         </div>
                         <!-- End Logo -->
@@ -68,6 +68,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
+                            <div class='event-title bold'>CURIOSIO</div>
                             <div id = 'regBtn' class='pull-right'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODc2/CURIOSIO'>Register/Sign In</a></div>
                         </div>
                     </div>
@@ -83,6 +84,7 @@
           <!-- Indicators -->
           <div class="container event-details">
             <div class="clearfix">
+              <h2 class='bold event-title-small small-screen'> CURIOSIO </h2>
               <h3>An understanding of the natural world and what’s in it is a source of not only great curiosity but great fulfilment” – David Attenborough</h3>
               <p>Neutrinos, Easter eggs, Joker-Voila! I have an answer! Think you can find out a link and connect the most random objects in the universe? Intaglio presents Curiosio to feed your inquisitive grey cells and keep then rejuvenated. Curiosio, an online quiz, will give the quizzers a set of questions to brainstorm over, use any means necessary and win cash prizes every week!</p>
               <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODc2/CURIOSIO'>Register/Sign In</a></div>
@@ -109,7 +111,7 @@
                   </ul>
                 </div>
                 <div>
-                  <i class="fa fa-inr fa-2x" aria-hidden="true" style='margin-left:30px;margin-top: 20px;'></i><span class='prize'>&nbsp;&nbsp;&nbsp;10K Cash Prize</span>
+                  <i class="fa fa-inr fa-2x" aria-hidden="true" style='margin-left:30px;margin-top: 20px;'></i><span class='prize'>&nbsp;&nbsp;&nbsp;Prize Amount 10,000</span>
                 </div>
               </div>
             </div>
