--- a/intaglio-v3/HTML/events/dataplay.html
+++ b/intaglio-v3/HTML/events/dataplay.html
@@ -59,7 +59,7 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="event-name" href="#body">
-                                DATAPLAY
+                              <img class="logo-img logo-img-main logo-event" src="../img/logo_white.png" alt="IIMC Logo" href = '#'>
                             </a>
                         </div>
                         <!-- End Logo -->
@@ -68,6 +68,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
+                            <div class='event-title bold'>DATAPLAY</div>
                             <div id = 'regBtn' class='pull-right'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODcz/DATAPLAY'>Register/Sign In</a></div>
                         </div>
                     </div>
@@ -83,6 +84,7 @@
           <!-- Indicators -->
           <div class="container event-details">
             <div class="clearfix">
+              <h2 class='bold event-title-small small-screen'> DATAPLAY </h2>
               <h3>“Data will talk if you are willing to listen” - Jim Bergeson</h3>
               <p>Data is like Diamond. It does not have any relevance when it is extracted. It’s raw and boring. Only once it is mined, processed, polished and looked at from certain angles & directions that it start looking good. For all Analytics enthusiasts out there, Intaglio brings to you its first ever systems event – DataPlay. As the name suggests, DataPlay would test the analytical ability of students, the skill to make sense out of raw data. The level gets tougher as teams progress, the problems become tricky and the solutions are not easy to locate. Get ready to swim in the oceans of data and locate the diamonds at the bottom of the ocean.</p>
               <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODcz/DATAPLAY'>Register/Sign In</a></div>
@@ -113,10 +115,32 @@
               <div class="col-md-6">
                 <div class="clearfix poc">
                   <h4> Point of Contact </h4>
-                  <ul>
-                    <li>Kuntal Roy - +91-9831793518 (kuntalr2018@email.iimcal.ac.in)</li>
-                    <li>Jasdeep Garg - +91-9467921722 (jasdeepg2018@email.iimcal.ac.in)</li>
-                  </ul>
+                  <div>
+                    <div class='row'>
+                      <div class='col-md-4 bold'>
+                        Kuntal Roy
+                      </div>
+                      <div class='col-md-4'>
+                        <i class="fa fa-phone"></i> +91-9831793518
+                      </div>
+                      <div class='col-md-4 flex'>
+                        <div><i class="fa fa-envelope"></i></div>
+                        <div class='margin-l-3'> kuntalr2018@email.iimcal.ac.in</div>
+                      </div>
+                    </div>
+                    <div class = 'row margin-t-2'>
+                      <div class='col-md-4 bold'>
+                        Jasdeep Garg
+                      </div>
+                      <div class='col-md-4'>
+                        <i class="fa fa-phone"></i> +91-9467921722
+                      </div>
+                      <div class='col-md-4 flex'>
+                        <div><i class="fa fa-envelope"></i></div>
+                        <div class='margin-l-3'>jasdeepg2018@email.iimcal.ac.in</div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="clearfix rules">
                   <h4> Rules </h4>
@@ -129,7 +153,7 @@
                   </ul>
                 </div>
                 <div>
-                  <i class="fa fa-inr fa-2x" aria-hidden="true" style='margin-left:30px;margin-top: 20px;'></i><span class='prize'>&nbsp;&nbsp;&nbsp;30K Cash Prize</span>
+                  <i class="fa fa-inr fa-2x" aria-hidden="true" style='margin-left:30px;margin-top: 20px;'></i><span class='prize'>&nbsp;&nbsp;&nbsp;Prize Amount 30,000</span>
                 </div>
               </div>
             </div>
