--- a/intaglio-v3/HTML/events/eotm.html
+++ b/intaglio-v3/HTML/events/eotm.html
@@ -59,7 +59,7 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="event-name" href="#body">
-                                EMPIRES OF THE MIND
+                              <img class="logo-img logo-img-main logo-event" src="../img/logo_white.png" alt="IIMC Logo" href = '#'>
                             </a>
                         </div>
                         <!-- End Logo -->
@@ -68,6 +68,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
+                            <div class='event-title bold'>EMPIRES OF THE MIND</div>
                             <div id = 'regBtn' class='pull-right'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODY2/EMPIRES_OF_THE_MIND'>Register/Sign In</a></div>
                         </div>
                     </div>
@@ -83,6 +84,7 @@
           <!-- Indicators -->
           <div class="container event-details">
             <div class="clearfix">
+              <h2 class='bold event-title-small small-screen'> EMPIRES OF THE MIND </h2>
               <h3>“The best of the group comes when everyone in the group does what’s best for himself and the group.” – John Nash</h3>
               <p>What’s the difference between a puzzle and real life? In real life, the interplay between multiple players influences the final outcome, thus making it dynamic unlike a puzzle. Come unleash the power of your mind and experience the effect of strategic decision making on real life events. Empires of the Mind is a multi-phase simulation event involving concepts of logical puzzle solving and game theory. Teams will be required to make strategic decisions in order to maximize gains for themselves as well as their teams, while cooperating and conflicting with other teams. It is said that your life is the sum of the choices that you make, and here we test you on a few of them.</p>
               <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODY2/EMPIRES_OF_THE_MIND'>Register/Sign In</a></div>
@@ -122,7 +124,7 @@
                   </ul>
                 </div>
                 <div>
-                  <i class="fa fa-inr fa-2x" aria-hidden="true" style='margin-left:30px;margin-top: 20px;'></i><span class='prize'>&nbsp;&nbsp;&nbsp;50K Cash Prize</span>
+                  <i class="fa fa-inr fa-2x" aria-hidden="true" style='margin-left:30px;margin-top: 20px;'></i><span class='prize'>&nbsp;&nbsp;&nbsp;Prize Amount 50,000</span>
                 </div>
               </div>
             </div>
