--- a/intaglio-v3/HTML/events/lotl.html
+++ b/intaglio-v3/HTML/events/lotl.html
@@ -59,7 +59,7 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="event-name" href="#body">
-                                LAW OF THE LAND
+                              <img class="logo-img logo-img-main logo-event" src="../img/logo_white.png" alt="IIMC Logo" href = '#'>
                             </a>
                         </div>
                         <!-- End Logo -->
@@ -68,6 +68,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
+                            <div class='event-title bold'>LAW OF THE LAND</div>
                             <div id = 'regBtn' class='pull-right'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODcy/LAW_OF_THE_LAND'>Register/Sign In</a></div>
                         </div>
                     </div>
@@ -83,6 +84,7 @@
           <!-- Indicators -->
           <div class="container event-details">
             <div class="clearfix">
+              <h2 class='bold event-title-small small-screen'> LAW OF THE LAND </h2>
               <h3>“The law is the public conscience” - Thomas Hobbes</h3>
               <p>Business Law establishes guidelines for what firms can do and cannot do, but it takes skills and experience of the individual to interpret the business and the law, so as to act in the right way. Law and Business, today, are deeply intertwined and linked to the core. One cannot do without the other. Business Professionals, for certain decisions, require expertise in areas outside core business. Lawyers too, in addition to the legal expertise, are expected to garner a very deep understanding of their clients’ businesses. Law of the land - where Law meets Business – will test the ability of participants to understand and interpret the law in detail. Through the complex and real-life cases based on business law, the participants will have to deep dive into a client’s problems and look for the elusive solutions.</p>
               <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODcy/LAW_OF_THE_LAND'>Register/Sign In</a></div>
@@ -113,10 +115,32 @@
               <div class="col-md-6">
                 <div class="clearfix poc">
                   <h4> Point of Contact </h4>
-                  <ul>
-                    <li>Vivek Ranjan - +91-8302005032 (vivekr2018@email.iimcal.ac.in)</li>
-                    <li>Sumit Kathuria - +91-9899706085 (sumitk2018@email.iimcal.ac.in)</li>
-                  </ul>
+                  <div>
+                    <div class='row'>
+                      <div class='col-md-4 bold'>
+                        Vivek Ranjan
+                      </div>
+                      <div class='col-md-4'>
+                        <i class="fa fa-phone"></i> +91-8302005032
+                      </div>
+                      <div class='col-md-4 flex'>
+                        <div><i class="fa fa-envelope"></i></div>
+                        <div class='margin-l-3'> vivekr2018@email.iimcal.ac.in</div>
+                      </div>
+                    </div>
+                    <div class = 'row margin-t-2'>
+                      <div class='col-md-4 bold'>
+                        Sumit Kathuria
+                      </div>
+                      <div class='col-md-4'>
+                        <i class="fa fa-phone"></i> +91-9899706085
+                      </div>
+                      <div class='col-md-4 flex'>
+                        <div><i class="fa fa-envelope"></i></div>
+                        <div class='margin-l-3'>sumitk2018@email.iimcal.ac.in</div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="clearfix rules">
                   <h4> Rules </h4>
@@ -129,7 +153,7 @@
                   </ul>
                 </div>
                 <div>
-                  <i class="fa fa-inr fa-2x" aria-hidden="true" style='margin-left:30px;margin-top: 20px;'></i><span class='prize'>&nbsp;&nbsp;&nbsp;30K Cash Prize</span>
+                  <i class="fa fa-inr fa-2x" aria-hidden="true" style='margin-left:30px;margin-top: 20px;'></i><span class='prize'>&nbsp;&nbsp;&nbsp;Prize Amount 30,000</span>
                 </div>
               </div>
             </div>
