--- a/intaglio-v3/HTML/events/marketplace.html
+++ b/intaglio-v3/HTML/events/marketplace.html
@@ -59,7 +59,7 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="event-name" href="#body">
-                                MARKETPLACE
+                              <img class="logo-img logo-img-main logo-event" src="../img/logo_white.png" alt="IIMC Logo" href = '#'>
                             </a>
                         </div>
                         <!-- End Logo -->
@@ -68,6 +68,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
+                            <div class='event-title bold'>MARKETPLACE</div>
                             <div id = 'regBtn' class='pull-right'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODY0/MARKETPLACE'>Register/Sign In</a></div>
                         </div>
                     </div>
@@ -83,6 +84,7 @@
           <!-- Indicators -->
           <div class="container event-details">
             <div class="clearfix">
+              <h2 class='bold event-title-small small-screen'> MARKETPLACE </h2>
               <h3>"You can't just ask customers what they want and then try to give that to them. By the time you get it built, they'll want something new.” - Steve Jobs</h3>
               <p>Good marketing is more than the 7Ps and fancy campaigns, it can change the face of a whole industry and put the firm ahead in the Marketplace. This event tests your ability to make a full proof marketing plan that can give Kotler a run for his money. It is a battle to create a marketing strategy that will revolutionize the monotony of the Marketplace. Only the best laid plans can survive the marketplace.</p>
               <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODY0/MARKETPLACE'>Register/Sign In</a></div>
@@ -113,10 +115,32 @@
               <div class="col-md-6">
                 <div class="clearfix poc">
                   <h4> Point of Contact </h4>
-                  <ul>
-                    <li>Taras Kumar Swain - +91-8826486187 (tarasks2018@email.iimcal.ac.in)</li>
-                    <li>Charuchandra Kurhekar- +91-9960746171 (charuchandradk2018@email.iimcal.ac.in)</li>
-                  </ul>
+                  <div>
+                    <div class='row'>
+                      <div class='col-md-4 bold'>
+                      Taras Kumar Swain
+                      </div>
+                      <div class='col-md-4'>
+                        <i class="fa fa-phone"></i> +91-8826486187
+                      </div>
+                      <div class='col-md-4 flex' style='margin-left: -14px;'>
+                        <div><i class="fa fa-envelope"></i></div>
+                        <div class='margin-l-3'> tarasks2018@email.iimcal.ac.in</div>
+                      </div>
+                    </div>
+                    <div class = 'row margin-t-2'>
+                      <div class='col-md-4 bold'>
+                        Charuchandra Kurhekar
+                      </div>
+                      <div class='col-md-4'>
+                        <i class="fa fa-phone"></i> +91-9960746171
+                      </div>
+                      <div class='col-md-4 flex' style='margin-left: -14px;'>
+                        <div><i class="fa fa-envelope"></i></div>
+                        <div class='margin-l-3'>charuchandradk2018@email.iimcal.ac.in</div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="clearfix rules">
                   <h4> Rules </h4>
@@ -129,7 +153,7 @@
                   </ul>
                 </div>
                 <div>
-                  <i class="fa fa-inr fa-2x" aria-hidden="true" style='margin-left:30px;margin-top: 20px;'></i><span class='prize'>&nbsp;&nbsp;&nbsp;50K Cash Prize</span>
+                  <i class="fa fa-inr fa-2x" aria-hidden="true" style='margin-left:30px;margin-top: 20px;'></i><span class='prize'>&nbsp;&nbsp;&nbsp;Prize Amount 50,000</span>
                 </div>
               </div>
             </div>
