--- a/intaglio-v3/HTML/events/mun.html
+++ b/intaglio-v3/HTML/events/mun.html
@@ -59,7 +59,7 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="event-name" href="#body">
-                                IIMC MUN
+                              <img class="logo-img logo-img-main logo-event" src="../img/logo_white.png" alt="IIMC Logo" href = '#'>
                             </a>
                         </div>
                         <!-- End Logo -->
@@ -68,6 +68,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
+                            <div class='event-title bold'>IIMC MUN</div>
                             <div id = 'regBtn' class='pull-right'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODc1/IIMC_MUN_3.0'>Register/Sign In</a></div>
                         </div>
                     </div>
@@ -83,6 +84,7 @@
           <!-- Indicators -->
           <div class="container event-details">
             <div class="clearfix">
+              <h2 class='bold event-title-small small-screen'> IIMC MUN </h2>
               <h3>“People forget. We are here to act, We are here to deliver results. We are agents of change. Our job is to change the UN and through it, the world.” - Ban Ki Moon</h3>
               <p>The IIM Calcutta Model United Nations seeks to test the diplomacy & policy making ability of participants in various international and national current affairs. The third edition will continue in bringing out the discussion of contemporary issues like poverty, affect of global warming and even political issues like Brexit, Trump Rule and its implications to the forefront encouraging the participants to come up with sustainable solutions.</p>
               <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODc1/IIMC_MUN_3.0'>Register/Sign In</a></div>
@@ -107,11 +109,44 @@
               <div class="col-md-6">
                 <div class="clearfix poc">
                   <h4> Point of Contact </h4>
-                  <ul>
-                    <li>Deepanshu Tomar - +91-8979047211 (deepanshut2018@email.iimcal.ac.in)</li>
-                    <li>Goutam Girish - +91-9704494064 (banisettigg2018@email.iimcal.ac.in)</li>
-                    <li>Sumit Kathuria - +91-9899706085 (sumitk2018@email.iimcal.ac.in)</li>
-                  </ul>
+                  <div>
+                    <div class='row'>
+                      <div class='col-md-4 bold'>
+                        Deepanshu Tomar
+                      </div>
+                      <div class='col-md-4'>
+                        <i class="fa fa-phone"></i> +91-8979047211
+                      </div>
+                      <div class='col-md-4 flex'>
+                        <div><i class="fa fa-envelope"></i></div>
+                        <div class='margin-l-3'> deepanshut2018@email.iimcal.ac.in</div>
+                      </div>
+                    </div>
+                    <div class = 'row margin-t-2'>
+                      <div class='col-md-4 bold'>
+                        Goutam Girish
+                      </div>
+                      <div class='col-md-4'>
+                        <i class="fa fa-phone"></i> +91-9704494064
+                      </div>
+                      <div class='col-md-4 flex'>
+                        <div><i class="fa fa-envelope"></i></div>
+                        <div class='margin-l-3'>banisettigg2018@email.iimcal.ac.in</div>
+                      </div>
+                    </div>
+                    <div class = 'row margin-t-2'>
+                      <div class='col-md-4 bold'>
+                        Sumit Kathuria
+                      </div>
+                      <div class='col-md-4'>
+                        <i class="fa fa-phone"></i> +91-9899706085
+                      </div>
+                      <div class='col-md-4 flex'>
+                        <div><i class="fa fa-envelope"></i></div>
+                        <div class='margin-l-3'>sumitk2018@email.iimcal.ac.in</div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="clearfix rules">
                   <h4> Rules </h4>
