--- a/intaglio-v3/HTML/events/olympus.html
+++ b/intaglio-v3/HTML/events/olympus.html
@@ -59,7 +59,7 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="event-name" href="#body">
-                                OLYMPUS
+                              <img class="logo-img logo-img-main logo-event" src="../img/logo_white.png" alt="IIMC Logo" href = '#'>
                             </a>
                         </div>
                         <!-- End Logo -->
@@ -68,6 +68,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
+                            <div class='event-title bold'>OLYMPUS</div>
                             <div id = 'regBtn' class='pull-right'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODU5/OLYMPUS_-_THE_FLAGSHIP_EVENT'>Register/Sign In</a></div>
                         </div>
                     </div>
@@ -83,6 +84,7 @@
           <!-- Indicators -->
           <div class="container event-details">
             <div class="clearfix">
+              <h2 class='bold event-title-small small-screen'> OLYMPUS </h2>
               <h3>“A hero is born among a hundred, a wise man is found among a thousand, but an accomplished one might not be found even among a hundred thousand men.” - Plato</h3>
               <p>The different facets of management have their own challenges and hurdles, but it takes a true leader to master all of them. The flagship event of Intaglio, Olympus will be the ultimate test for an individual through gruelling rounds of finance, strategy, marketing, analytics amongst other facets of management. Olympus is a hunt to glorify the one true leader from a galaxy of bright minds in the B-schools across the globe. Victory belongs to the most persevering, with a grit to shine across every dimension. An ultimate conglomeration of thrill, tingle & treat, Olympus will make a run at your swagger and smarts.</p>
               <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODU5/OLYMPUS_-_THE_FLAGSHIP_EVENT'>Register/Sign In</a></div>
@@ -113,10 +115,32 @@
               <div class="col-md-6">
                 <div class="clearfix poc">
                   <h4> Point of Contact </h4>
-                  <ul>
-                    <li>Soham Ghosh - +91-9163704094 (sohamg2018@email.iimcal.ac.in)</li>
-                    <li>Rytham Bhutani - +91-7840076400 (rythamb2018@email.iimcal.ac.in)</li>
-                  </ul>
+                  <div>
+                    <div class='row'>
+                      <div class='col-md-4 bold'>
+                        Soham Ghosh
+                      </div>
+                      <div class='col-md-4'>
+                        <i class="fa fa-phone"></i> +91-9163704094
+                      </div>
+                      <div class='col-md-4 flex'>
+                        <div><i class="fa fa-envelope"></i></div>
+                        <div class='margin-l-3'> sohamg2018@email.iimcal.ac.in</div>
+                      </div>
+                    </div>
+                    <div class = 'row margin-t-2'>
+                      <div class='col-md-4 bold'>
+                        Rytham Bhutani
+                      </div>
+                      <div class='col-md-4'>
+                        <i class="fa fa-phone"></i> +91-7840076400
+                      </div>
+                      <div class='col-md-4 flex'>
+                        <div><i class="fa fa-envelope"></i></div>
+                        <div class='margin-l-3'>rythamb2018@email.iimcal.ac.in</div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="clearfix rules">
                   <h4> Rules </h4>
@@ -129,7 +153,7 @@
                   </ul>
                 </div>
                 <div>
-                  <i class="fa fa-inr fa-2x" aria-hidden="true" style='margin-left:30px;margin-top: 20px;'></i><span class='prize'>&nbsp;&nbsp;&nbsp;100K Cash Prize</span>
+                  <i class="fa fa-inr fa-2x" aria-hidden="true" style='margin-left:30px;margin-top: 20px;'></i><span class='prize'>&nbsp;&nbsp;&nbsp;Prize Amount 1,00,000</span>
                 </div>
               </div>
             </div>
