--- a/intaglio-v3/HTML/events/operationalize.html
+++ b/intaglio-v3/HTML/events/operationalize.html
@@ -59,7 +59,7 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="event-name" href="#body">
-                                OPERATIONALIZE
+                              <img class="logo-img logo-img-main logo-event" src="../img/logo_white.png" alt="IIMC Logo" href = '#'>
                             </a>
                         </div>
                         <!-- End Logo -->
@@ -68,6 +68,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
+                            <div class='event-title bold'>OPERATIONALISE</div>
                             <div id = 'regBtn' class='pull-right'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODYz/OPERATIONALISE'>Register/Sign In</a></div>
                         </div>
                     </div>
@@ -83,6 +84,7 @@
           <!-- Indicators -->
           <div class="container event-details">
             <div class="clearfix">
+              <h2 class='bold event-title-small small-screen'> OPERATIONALISE </h2>
               <h3>An ounce of performance is worth pounds of promises” - Mae West</h3>
               <p>The circulatory system of any company, the field of operations has always been subject to rapid technological innovation and dynamic processes. To synchronise the forecasts, supply, transportation, inventory levels and reverse transportation requires mammoth organisational and coordination skills that are not easy to master. All business operations depends on three words - people, product & profits. In the advent of digitisation & growth of e-commerce, it all depends on which organisation uses effective optimisation of resources. Widely revered among the intelligentsia across the country, this operations event carries a unique charm & prestige. Rising every year in relevance, stature and competitiveness, the state of affairs is always phenomenal. Operationalise presents a new paradigm and a vast pool of opportunities along with current & contemporary challenges in this domain. Operationalise challenges participants on the grounds of theory, puts them through a simulated supply chain environment and a corporate case study to test their abilities as operations managers. Efficiency mixed with effectiveness is the key to performing well.</p>
               <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODYz/OPERATIONALISE'>Register/Sign In</a></div>
@@ -113,10 +115,32 @@
               <div class="col-md-6">
                 <div class="clearfix poc">
                   <h4> Point of Contact </h4>
-                  <ul>
-                    <li>Mohit Manaktala - +91-9871098007 (mohitm2018@email.iimcal.ac.in)</li>
-                    <li>Gaurav Kumar- +91-9999944074 (gauravk2018@email.iimcal.ac.in)</li>
-                  </ul>
+                  <div>
+                    <div class='row'>
+                      <div class='col-md-4 bold'>
+                        Mohit Manaktala
+                      </div>
+                      <div class='col-md-4'>
+                        <i class="fa fa-phone"></i> +91-9871098007
+                      </div>
+                      <div class='col-md-4 flex'>
+                        <div><i class="fa fa-envelope"></i></div>
+                        <div class='margin-l-3'> mohitm2018@email.iimcal.ac.in</div>
+                      </div>
+                    </div>
+                    <div class = 'row margin-t-2'>
+                      <div class='col-md-4 bold'>
+                        Gaurav Kumar
+                      </div>
+                      <div class='col-md-4'>
+                        <i class="fa fa-phone"></i> +91-9999944074
+                      </div>
+                      <div class='col-md-4 flex'>
+                        <div><i class="fa fa-envelope"></i></div>
+                        <div class='margin-l-3'>gauravk2018@email.iimcal.ac.in</div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="clearfix rules">
                   <h4> Rules </h4>
@@ -129,7 +153,7 @@
                   </ul>
                 </div>
                 <div>
-                  <i class="fa fa-inr fa-2x" aria-hidden="true" style='margin-left:30px;margin-top: 20px;'></i><span class='prize'>&nbsp;&nbsp;&nbsp;125K Cash Prize</span>
+                  <i class="fa fa-inr fa-2x" aria-hidden="true" style='margin-left:30px;margin-top: 20px;'></i><span class='prize'>&nbsp;&nbsp;&nbsp;Prize Amount 1,25,000</span>
                 </div>
               </div>
             </div>
