--- a/intaglio-v3/HTML/events/quizzical.html
+++ b/intaglio-v3/HTML/events/quizzical.html
@@ -59,7 +59,7 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="event-name" href="#body">
-                                QUIZZICAL
+                              <img class="logo-img logo-img-main logo-event" src="../img/logo_white.png" alt="IIMC Logo" href = '#'>
                             </a>
                         </div>
                         <!-- End Logo -->
@@ -68,6 +68,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
+                          <div class='event-title bold'>QUIZZICAL</div>
                             <div id = 'regBtn' class='pull-right'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODY5/QUIZZICAL'>Register/Sign In</a></div>
                         </div>
                     </div>
@@ -83,6 +84,7 @@
           <!-- Indicators -->
           <div class="container event-details">
             <div class="clearfix">
+              <h2 class='bold event-title-small small-screen'> QUIZZICAL </h2>
               <h3>“The most important thing is to not stop questioning” – Albert Einstein</h3>
               <p>Quizzical is one of the most addictive and popular mind sports that commands great participation and viewership. Amidst the nail-biting tension and deafening silence, the best minds in the country battle out their wits to answer questions put forth by star quizmasters. The silence only is broken by enthusiastic & cheering crowd. Having been graced by renowned quizmasters like Derek O’ Brien, IIM Calcutta promises to host the quizzing event with full fervour and continue to be the most attractive event of Intaglio.</p>
               <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODY5/QUIZZICAL'>Register/Sign In</a></div>
@@ -118,7 +120,7 @@
                   </ul>
                 </div>
                 <div>
-                  <i class="fa fa-inr fa-2x" aria-hidden="true" style='margin-left:30px;margin-top: 20px;'></i><span class='prize'>&nbsp;&nbsp;&nbsp;25K Cash Prize</span>
+                  <i class="fa fa-inr fa-2x" aria-hidden="true" style='margin-left:30px;margin-top: 20px;'></i><span class='prize'>&nbsp;&nbsp;&nbsp;Prize Amount 25,000</span>
                 </div>
               </div>
             </div>
