--- a/intaglio-v3/HTML/events/wotp.html
+++ b/intaglio-v3/HTML/events/wotp.html
@@ -59,7 +59,7 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="event-name" href="#body">
-                                WIZARDS OFF THE PITCH
+                              <img class="logo-img logo-img-main logo-event" src="../img/logo_white.png" alt="IIMC Logo" href = '#'>
                             </a>
                         </div>
                         <!-- End Logo -->
@@ -68,6 +68,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
+                            <div class='event-title bold'>WIZARDS OF THE PITCH</div>
                             <div id = 'regBtn' class='pull-right'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODY3/WIZARDS_OFF_THE_PITCH'>Register/Sign In</a></div>
                         </div>
                     </div>
@@ -83,6 +84,7 @@
           <!-- Indicators -->
           <div class="container event-details">
             <div class="clearfix">
+              <h2 class='bold event-title-small small-screen'> WIZARDS OF THE PITCH </h2>
               <h3>"Without strategy execution is aimless, without execution strategy is useless" – Morris chang</h3>
               <p>Strategy formulation followed by its execution is what completes the analysis problem. Sports is that one area where you keep improvising your strategy along with executing those strategies. This event makes you test your managerial but sporting skills together. A fantasy football league with participating teams will join the league and compete against each other. So, put on your manager’s suit and take your team to the top! There are lots of prizes on offer.</p>
               <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODY3/WIZARDS_OFF_THE_PITCH'>Register/Sign In</a></div>
@@ -107,9 +109,20 @@
               <div class="col-md-6">
                 <div class="clearfix poc">
                   <h4> Point of Contact </h4>
-                  <ul>
-                    <li>Sushobin Thakur - +91-9569819582 (sushobint2018@email.iimcal.ac.in)</li>
-                  </ul>
+                  <div>
+                    <div class='row'>
+                      <div class='col-md-4 bold'>
+                        Sushobin Thakur
+                      </div>
+                      <div class='col-md-4'>
+                        <i class="fa fa-phone"></i> +91-9569819582
+                      </div>
+                      <div class='col-md-4 flex'>
+                        <div><i class="fa fa-envelope"></i></div>
+                        <div class='margin-l-3'> sushobint2018@email.iimcal.ac.in</div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="clearfix rules">
                   <h4> Rules </h4>
