--- a/intaglio-v3/HTML/events/synergize.html
+++ b/intaglio-v3/HTML/events/synergize.html
@@ -59,7 +59,7 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="event-name" href="#body">
-                                SYNERGIZE
+                              <img class="logo-img logo-img-main logo-event" src="../img/logo_white.png" alt="IIMC Logo" href = '#'>
                             </a>
                         </div>
                         <!-- End Logo -->
@@ -68,6 +68,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
+                            <div class='event-title bold'>SYNERGIZE</div>
                             <div id = 'regBtn' class='pull-right'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODc0/SYNERGIZE_'>Register/Sign In</a></div>
                         </div>
                     </div>
@@ -83,6 +84,7 @@
           <!-- Indicators -->
           <div class="container event-details">
             <div class="clearfix">
+              <h2 class='bold event-title-small small-screen'> SYNERGIZE </h2>
               <h3>“Collaborate, Conquer & Scale”</h3>
               <p>Of the endless list of resources that a company owns, People are, by far, the most important resource for most companies. The role of HR has been looked down-upon for a long time. Things have come a long way since then. HR, like the rest of management, is an art as well as a science – One that uses analytical frameworks, bell shaped curves and so on. Intaglio’s HR event called – Synergize, invites students from across the country to tell their skills on various aspects of HR – from Role Management, recruitment, compensation management and so on.</p>
               <div id = 'regBtn' class='pull-right small-screen'><a href='http://www.quizzinginc.com/pages/events/event_detail/1Av69SMODc0/SYNERGIZE_'>Register/Sign In</a></div>
@@ -113,10 +115,32 @@
               <div class="col-md-6">
                 <div class="clearfix poc">
                   <h4> Point of Contact </h4>
-                  <ul>
-                    <li>Abhishek Paul - +91-8670252350 (abhishekp2018@email.iimcal.ac.in)</li>
-                    <li>Sumit Kathuria - +91-9899706085 (sumitk2018@email.iimcal.ac.in)</li>
-                  </ul>
+                  <div>
+                    <div class='row'>
+                      <div class='col-md-4 bold'>
+                        Abhishek Paul
+                      </div>
+                      <div class='col-md-4'>
+                        <i class="fa fa-phone"></i> +91-8670252350
+                      </div>
+                      <div class='col-md-4 flex'>
+                        <div><i class="fa fa-envelope"></i></div>
+                        <div class='margin-l-3'> abhishekp2018@email.iimcal.ac.in</div>
+                      </div>
+                    </div>
+                    <div class = 'row margin-t-2'>
+                      <div class='col-md-4 bold'>
+                        Sumit Kathuria
+                      </div>
+                      <div class='col-md-4'>
+                        <i class="fa fa-phone"></i> +91-9899706085
+                      </div>
+                      <div class='col-md-4 flex'>
+                        <div><i class="fa fa-envelope"></i></div>
+                        <div class='margin-l-3'>sumitk2018@email.iimcal.ac.in</div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="clearfix rules">
                   <h4> Rules </h4>
@@ -129,7 +153,7 @@
                   </ul>
                 </div>
                 <div>
-                  <i class="fa fa-inr fa-2x" aria-hidden="true" style='margin-left:30px;margin-top: 20px;'></i><span class='prize'>&nbsp;&nbsp;&nbsp;30K Cash Prize</span>
+                  <i class="fa fa-inr fa-2x" aria-hidden="true" style='margin-left:30px;margin-top: 20px;'></i><span class='prize'>&nbsp;&nbsp;&nbsp;Prize Amount 30,000</span>
                 </div>
               </div>
             </div>
