--- a/intaglio-v3/HTML/events/oikonomics.html
+++ b/intaglio-v3/HTML/events/oikonomics.html
@@ -137,7 +137,7 @@
                       </div>
                       <div class='col-md-4 flex'>
                         <div><i class="fa fa-envelope"></i></div>
-                        <div class='margin-l-3'>vaibhavb2018@email.iimcal.ac.in</div>
+                        <div class='margin-l-3'>vaibhavbahl2018@email.iimcal.ac.in</div>
                       </div>
                     </div>
                   </div>
